--- a/PDE.Web/Views/Home/partial/_tableMiembro.cshtml
+++ b/PDE.Web/Views/Home/partial/_tableMiembro.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<PDE.Models.Entities.Miembro>
-
+<div class="row">
 <table  class="table table-bordered" style="border-collapse:collapse;" id="dataTable">
   <thead>
       <tr>
@@ -36,3 +36,4 @@
      }
     </tbody>
 </table>
+</div>
