--- a/PDE.Web/Views/Cargos/Index.cshtml
+++ b/PDE.Web/Views/Cargos/Index.cshtml
@@ -7,24 +7,27 @@
 <h1 class="mt-4"></h1>
 
 <div class="card mb-4">
-    <div class="card-header row">
-        <div class="col-11">
-            <i class="fas fa-table me-1"></i>
-            Cargos
-        </div>
+    <div class="card-header" style="background-color:#25a04d">
+        <div class="row text-white">
+            <div class="col-11">
+                <i class="fas fa-table me-1"></i>
+                Cargos
+            </div>
 
-        <div class="col-1 align-right">
-            <a asp-action="Create" rel="Agregar Cargos" ><i class="fas fa-plus fs-6"></i></a>
+            <div class="col-1 float-sm-end">
+                <a asp-action="Create" rel="Agregar Cargos" ><i class="fas fa-plus fs-12" style="color:white"></i></a>
+            </div>
         </div>
-        
+     
     </div>
     <div class="card-body">
-        <table id="dataTable">
+        <table id="dataTable" class="table" >
             <thead>
                 <tr>
                     <th>
                         Descripción
                     </th>
+                    <th></th>
                     <th></th>
                 </tr>
             </thead>
