--- a/PDE.Web/Views/Home/partial/_buscador.cshtml
+++ b/PDE.Web/Views/Home/partial/_buscador.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="card">
-  <div class="card-header">
+  <div class="card-header text-white" style="background-color:#25a04d">
     Buscar
   </div>
   <div class="card-body">
