--- a/PDE.Web/Views/Miembros/Create.cshtml
+++ b/PDE.Web/Views/Miembros/Create.cshtml
@@ -5,38 +5,33 @@
 }
 <h1 class="mt-4"></h1>
 <div class="card">
-    <div class="card-header">
+    <div class="card-header text-white" style="background-color:#25a04d">
        <i class="fas fa-table me-1"></i>
          Agregar Miembro
     </div>
    <div class="card-body">
         <div class="row">
-            <div class="col-md-6">
+           
+            <div class="col-md-8" >
                 <div class="input-group mb-3">
-                  <input type="text" id="txtCedula" class="form-control" placeholder="Buscar por Cedula" />
+                  <input type="text" id="txtCedula" class="form-control" placeholder="Buscar por cedula" />
                   <div class="input-group-append">
                     <a class="btn btn-outline-secondary" id="buscarCedula"><i class="fa-solid fa-magnifying-glass"></i></a>
                   </div>
                 </div>
             </div>
-            <div class="col-md-6">
-
-            </div>
+            
         </div>
         <hr />
-        <div id="conteinerForm">
+        <div id="conteinerForm" class="mb-4">
 
         </div>
    </div>
 </div>
 
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
-    <script type="text/javascript" src="~/js/miembro.js" ></script>
+    <script type="text/javascript" src="~/js/Miembros/miembro.js" ></script>
 }
