--- a/PDE.Web/Views/Miembros/Index.cshtml
+++ b/PDE.Web/Views/Miembros/Index.cshtml
@@ -1,22 +1,22 @@
 ﻿@model IEnumerable<PDE.Models.Entities.Miembro>
 
 @{
-   
+   ViewData["Title"] = "Miembros";
 }
 
 <h1 class="mt-4"></h1>
 
 <div class="card mb-4">
-    <div class="card-header row">
-        <div class="col-11">
-            <i class="fas fa-table me-1"></i>
-            Miembros
-        </div>
-
-        <div class="col-1 align-right">
-            <a asp-action="Create" rel="Agregar Miembro" ><i class="fas fa-plus fs-6"></i></a>
-        </div>
-        
+    <div class="card-header" style="background-color:#25a04d">
+        <div class="row text-white">
+            <div class="col-md-11 ">
+                <i class="fas fa-table me-1"></i>
+                Miembros
+            </div>
+            <div class="col-md-1 float-sm-end">
+                <a asp-action="Create" alt="Agregar Miembro" ><i class="fas fa-plus me-lg-1" style="color:white"></i></a>
+            </div>
+        </div>       
     </div>
     <div class="card-body">
         <table id="dataTable" class="table table-bordered">
