--- a/PDE.Web/Views/Miembros/Edit.cshtml
+++ b/PDE.Web/Views/Miembros/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="mt-4"></h1>
 <div class="card">
-    <div class="card-header">
+    <div class="card-header text-white" style="background-color:#25a04d">
        <i class="fas fa-table me-1"></i>
          Editar Miembro
     </div>
@@ -17,42 +17,51 @@
     <input type="hidden" asp-for="CategoriaId" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row">
-                <div class="col-md-6 form-group">
-                    <label asp-for="Nombres" class="control-label"></label>
-                    <input asp-for="Nombres" readonly="true" class="form-control" />
-                    <span asp-validation-for="Nombres" class="text-danger"></span>
+                <div class="col-md-2">
+                    <div class="row">
+                        <img src="~/assets/img/icon-profile-22.png" class="float-start col-md-12" alt="">
+                    </div>                    
                 </div>
-                <div class="col-md-6 form-group">
-                    <label asp-for="Apellidos" class="control-label"></label>
-                    <input asp-for="Apellidos" readonly="true" class="form-control" />
-                    <span asp-validation-for="Apellidos" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 form-group">
-                    <label asp-for="FechaNacimiento" class="control-label"></label>
-                    <input asp-for="FechaNacimiento" readonly="true"  class="form-control" />
-                    <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
-                </div>
-                <div class="col-md-6 form-group">
-                    <label asp-for="LugarNacimiento" class="control-label"></label>
-                    <input asp-for="LugarNacimiento" readonly="true" class="form-control" />
-                    <span asp-validation-for="LugarNacimiento" class="text-danger"></span>
+                <div class="col-md-10">
+                    <div class="row ">
+                        <div class="col-md-5 form-group">
+                            <label asp-for="Nombres" class="control-label"></label>
+                            <input asp-for="Nombres" readonly="true" class="form-control" />
+                            <span asp-validation-for="Nombres" class="text-danger"></span>
+                        </div>
+                        <div class="col-md-7 form-group">
+                            <label asp-for="Apellidos" class="control-label"></label>
+                            <input asp-for="Apellidos" readonly="true" class="form-control" />
+                            <span asp-validation-for="Apellidos" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-5 form-group">
+                            <label asp-for="FechaNacimiento" class="control-label"></label>
+                            <input asp-for="FechaNacimiento" readonly="true"  class="form-control" />
+                            <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
+                        </div>
+                        <div class="col-md-7 form-group">
+                            <label asp-for="LugarNacimiento" class="control-label"></label>
+                            <input asp-for="LugarNacimiento" readonly="true" class="form-control" />
+                            <span asp-validation-for="LugarNacimiento" class="text-danger"></span>
+                        </div>
+                   </div>
+                   <div class="row">
+                     <div class="col-md-5 form-group">
+                          <label asp-for="SexoId" class="control-label">Sexo</label>
+                          <input asp-for="SexoId" type="hidden" class="form-control" />
+                          <input value="@Model.Sexo.Descripcion" class="form-control" readonly="readonly" />
+                      </div>
+                     <div class="col-md-7 form-group">
+                          <label asp-for="EstadoCivilId" class="control-label">Estado Civil</label>
+                          <input asp-for="EstadoCivilId" type="hidden" class="form-control" />
+                          <input value="@Model.EstadoCivil.Descripcion" class="form-control" readonly="readonly" />
+                       </div>
+                   </div>
                 </div>
             </div>
 
-             <div class="row">
-               <div class="col-md-6 form-group">
-                    <label asp-for="SexoId" class="control-label">Sexo</label>
-                    <input asp-for="SexoId" type="hidden" class="form-control" />
-                    <input value="@Model.Sexo.Descripcion" class="form-control" readonly="readonly" />
-                </div>
-               <div class="col-md-6 form-group">
-                    <label asp-for="EstadoCivilId" class="control-label">Estado Civil</label>
-                    <input asp-for="EstadoCivilId" type="hidden" class="form-control" />
-                    <input value="@Model.EstadoCivil.Descripcion" class="form-control" readonly="readonly" />
-                </div>
-            </div>
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label asp-for="Cedula" class="control-label"></label>
@@ -106,7 +115,8 @@
                 </div>
                 <div class="col-md-6 form-group">
                     <label asp-for="LocalidadId" class="control-label">Localidad</label>
-                    @Html.DropDownListFor(model => model.LocalidadId, ViewBag.Localidad as SelectList,"--Seleccione una localidad--",new { @class="form-control"})
+@*                    @Html.DropDownListFor(model => model.LocalidadId, ViewBag.Localidad as SelectList,"--Seleccione una localidad--",new { @class="form-control"})*@
+                    <select asp-for="LocalidadId" asp-items="@ViewBag.Localidades" class="form-control"></select>
                     <span asp-validation-for="LocalidadId" class="text-danger"></span>
                 </div>
             </div>
