--- a/PDE.Web/Views/Home/Index.cshtml
+++ b/PDE.Web/Views/Home/Index.cshtml
@@ -16,29 +16,20 @@
             </div>
         </div>
         <div class="col-xl-3 col-md-6">
-            <div class="card bg-warning text-white mb-4">
-                <div class="card-body">Warning Card</div>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
-                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+            <div class="card text-white mb-4" style="background-color:#ffbb00">
+                <div class="card-body text-md-center">
+                    <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoPais) %</h5>
+                    <div class="card-text text-white">@(ViewBag.Totales.TotalPais) de 10,000</div>
+                    <p class="card-text text-white">Miembros en el País</p>
                 </div>
             </div>
         </div>
         <div class="col-xl-3 col-md-6">
             <div class="card bg-success text-white mb-4">
-                <div class="card-body">Success Card</div>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
-                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-md-6">
-            <div class="card bg-danger text-white mb-4">
-                <div class="card-body">Danger Card</div>
-                <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
-                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                <div class="card-body text-md-center">
+                    <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoExterior) %</h5>
+                    <div class="card-text text-white">@(ViewBag.Totales.TotalExterior) de 10,000</div>
+                    <p class="card-text text-white">Miembros en el Exterior</p>
                 </div>
             </div>
         </div>
