--- a/PDE.Web/Views/Shared/_Layout.cshtml
+++ b/PDE.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                      <li><a class="dropdown-item" href="#!">Settings</a></li>
                      <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                      <li><hr class="dropdown-divider" /></li>
-                     <li><a class="dropdown-item" href="#!">Logout</a></li>
+                     <li><a class="dropdown-item" asp-controller="Users" asp-action="Logon" >Logout</a></li>
                  </ul>
              </li>
          </ul>
@@ -135,8 +135,11 @@
                     </div>
                     <div class="sb-sidenav-footer">
                         <div class="small">Logged in as:</div>
-                        Start Bootstrap
-                    </div>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            @User.Claims.FirstOrDefault(a => a.Type == "FullName").Value;
+                        }
+                </div>
             </nav>
         </div>
         <div id="layoutSidenav_content">
