--- a/PDE.Web/Views/CargoTerritorials/Index.cshtml
+++ b/PDE.Web/Views/CargoTerritorials/Index.cshtml
@@ -19,7 +19,7 @@
         
     </div>
     <div class="card-body">
-        <table id="dataTable">
+        <table id="dataTable" class="table">
             <thead>
         <tr>
             <th>
