--- a/PDE.Web/Views/Miembros/Index.cshtml
+++ b/PDE.Web/Views/Miembros/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PDE.Models.Entities.Miembro>
+﻿@model IEnumerable<PDE.Models.Dto.MiembroDto>
 
 @{
    ViewData["Title"] = "Miembros";
