--- a/PDE.Web/Views/Miembros/partial/_createForm.cshtml
+++ b/PDE.Web/Views/Miembros/partial/_createForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model PDE.Models.Entities.Miembro
+﻿@model PDE.Models.Dto.MiembroDto
         
 <form asp-action="Create">            
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
