--- a/PDE.Web/Views/CargoTerritorials/Index.cshtml
+++ b/PDE.Web/Views/CargoTerritorials/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PDE.Models.Entities.CargoTerritorial>
+﻿@model IEnumerable<PDE.Models.Dto.CargoTerritorialDto>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,14 +7,14 @@
 <h1 class="mt-4"></h1>
 
 <div class="card mb-4">
-    <div class="card-header row">
+    <div class="card-header row text-white">
         <div class="col-11">
             <i class="fas fa-table me-1"></i>
             Cargos Territoriales
         </div>
 
         <div class="col-1 align-right">
-            <a asp-action="Create" rel="Agregar Cargos" ><i class="fas fa-plus fs-6"></i></a>
+            <a asp-action="Create" rel="Agregar Cargos" ><i class="fas fa-plus fs-6" style="color:white"></i></a>
         </div>
         
     </div>
