--- a/PDE.Web/Views/Home/Index.cshtml
+++ b/PDE.Web/Views/Home/Index.cshtml
@@ -2,50 +2,49 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1 class="mt-4"></h1>
+@*<h1 class="mt-4"></h1>*@
 <div class="row">
     <div class="col-md-9">
-    <div class="row">
-        <div class="col-xl-3 col-md-6 mb-4">
-            <div class="card border-success" style="background-color:#25a04d">
-                <div class="card-body text-md-center">
-                    <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoPleno) %</h5>
-                    <div class="card-text text-white">@(ViewBag.Totales.TotalPleno) de 10,000</div>
-                    <p class="card-text text-white">Miembros en el Pleno</p>
+        <div class="row">
+            <div class="col-xl-3 col-md-6 mb-4">
+                <div class="card border-success" style="background-color:#25a04d">
+                    <div class="card-body text-md-center">
+                        <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoPleno) %</h5>
+                        <div class="card-text text-white">@(ViewBag.Totales.TotalPleno) de 10,000</div>
+                        <p class="card-text text-white">Miembros en el Pleno</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card text-white mb-4" style="background-color:#005721">
+                    <div class="card-body text-md-center">
+                        <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoPais) %</h5>
+                        <div class="card-text text-white">@(ViewBag.Totales.TotalPais) de 10,000</div>
+                        <p class="card-text text-white">Miembros en el País</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card bg-success text-white mb-4">
+                    <div class="card-body text-md-center">
+                        <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoExterior) %</h5>
+                        <div class="card-text text-white">@(ViewBag.Totales.TotalExterior) de 10,000</div>
+                        <p class="card-text text-white">Miembros en el Exterior</p>
+                    </div>
+                </div>
+            </div>
+         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card mb-4">
+                    <div class="card-header text-white" style="background-color:#25a04d">
+                        Miembros
+                    </div>
+                    <div class="card-body navbar-nav-scroll" id="tbMiembroContaine">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6">
-            <div class="card text-white mb-4" style="background-color:#005721">
-                <div class="card-body text-md-center">
-                    <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoPais) %</h5>
-                    <div class="card-text text-white">@(ViewBag.Totales.TotalPais) de 10,000</div>
-                    <p class="card-text text-white">Miembros en el País</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-md-6">
-            <div class="card bg-success text-white mb-4">
-                <div class="card-body text-md-center">
-                    <h5 class="card-title text-white">@(ViewBag.Totales.PorcientoExterior) %</h5>
-                    <div class="card-text text-white">@(ViewBag.Totales.TotalExterior) de 10,000</div>
-                    <p class="card-text text-white">Miembros en el Exterior</p>
-                </div>
-            </div>
-        </div>
-     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card mb-4">
-                <div class="card-header text-white" style="background-color:#25a04d">
-                    Miembros
-                </div>
-                <div class="card-body navbar-nav-scroll" id="tbMiembroContaine">
-                </div>
-            </div>
-        </div>
-    </div>
-
     </div>
 
     <div class="col-md-3">
