--- a/PDE.Web/Views/Home/partial/_tableMiembro.cshtml
+++ b/PDE.Web/Views/Home/partial/_tableMiembro.cshtml
@@ -32,7 +32,7 @@
                 @item.Cedula
             </td>
             <td>
-                @item.Cargo.Descripcion
+                @item.CargoTerritorial.Cargo.Descripcion
             </td>
             <td>
                 @($"{item.Supervisor.Nombres} {item.Supervisor.Apellidos}")
