--- a/PDE.Web/Views/Miembros/Edit.cshtml
+++ b/PDE.Web/Views/Miembros/Edit.cshtml
@@ -114,16 +114,16 @@
                     <span asp-validation-for="Celular" class="text-danger"></span>
                 </div>
                 <div class="col-md-6 form-group">
-                    <label asp-for="LocalidadId" class="control-label">Localidad</label>
+@*                    <label asp-for="LocalidadId" class="control-label">Localidad</label>
                     @Html.DropDownListFor(model => model.LocalidadId, ViewBag.Localidades as SelectList,"--Seleccione una localidad--",new { @class="form-control"})
-                    <span asp-validation-for="LocalidadId" class="text-danger"></span>
+                    <span asp-validation-for="LocalidadId" class="text-danger"></span>*@
                 </div>
             </div>
             <div class="row">
                  <div class="col-md-6 form-group">
-                    <label asp-for="CargoId" class="control-label">Cargo Territorial</label>                    
+@*                    <label asp-for="CargoId" class="control-label">Cargo Territorial</label>                    
                     <select asp-for="CargoId" asp-items="@ViewBag.Cargos" class="form-control"></select>
-                    <span asp-validation-for="CargoId" class="text-danger"></span>
+                    <span asp-validation-for="CargoId" class="text-danger"></span>*@
                 </div>
                 <div class="col-md-6 form-group">
                     <label asp-for="SupervisorId" class="control-label">Supervisor</label>                    
